footer html 내용만 추가

--- a/index.html
+++ b/index.html
@@ -141,19 +141,21 @@
                             <div class="cols-banner3"><img src="img/cols-banner3.jpg" alt=""></div>
                         </div>
                         <!--공지사항을 나중에 제목만 리스트롤 뽑아 낼것임 공지 사항등록 한것중에 필요 한것들만 -->
-                        <!--이줄은 css파일로 이전해야함-->
-                        <div class="notice-outer">
-                            <h3>
-                                <img src="img/ico_notice.png" alt=""> 공지사항
-                            </h3>
+                        <div class="notice-outer-outer">
 
-                            <div class="notice">
-                                <ul>
-                                    <li>notice-subject-test1</li>
-                                    <li>notice-subject-test2</li>
-                                    <li>notice-subject-test3</li>
-                                    <li>notice-subject-test4</li>
-                                </ul>
+                            <div class="notice-outer">
+                                <h3>
+                                    <img src="img/ico_notice.png" alt=""> 공지사항
+                                </h3>
+
+                                <div class="notice">
+                                    <ul>
+                                        <li>notice-subject-test1</li>
+                                        <li>notice-subject-test2</li>
+                                        <li>notice-subject-test3</li>
+                                        <li>notice-subject-test4</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -161,7 +163,96 @@
 
             </div>
         </section>
-        <footer></footer>
+        <footer>
+            <div class="footwrap">
+                <iframe src="http://ad.cgv.co.kr/NetInsight/html/CGV/CGV_201401/main@Bottom" width="100%" height="240" title="광고-딜카" frameborder="0" scrolling="no" marginwidth="0" marginheight="0" name="Bottom" id="Bottom"></iframe>
+            </div>
+            <div class="sect-smuse">
+                <ul>
+                    <li><a href="#" class="dx"></a></li>
+                    <li><a href="#" class="imax"></a></li>
+                    <li><a href="#" class="screenx"></a></li>
+                    <li><a href="#" class="spherex"></a></li>
+                    <li><a href="#" class="soudx"></a></li>
+                    <li><a href="#" class="tempur-cinema"></a></li>
+                    <li><a href="#" class="cold-class"></a></li>
+                    <li><a href="#" class="cine-de-chef"></a></li>
+                    <li><a href="#" class="priveate-cinema"></a></li>
+                    <li><a href="#" class="cinekids"></a></li>
+                </ul>
+            </div>
+            <div class="sect-cinfo">
+                <div class="policy">
+                    <ul>
+                        <li><a href="#">회사소개</a></li>
+                        <li><a href="#">IR</a></li>
+                        <li><a href="#">채용정보</a></li>
+                        <li><a href="#">광고/프로모션문의</a></li>
+                        <li><a href="#">제휴문의</a></li>
+                        <li><a href="#">출점문의</a></li>
+                        <li><a href="#">이용약관</a></li>
+                        <li><a href="#">편성기준</a></li>
+                        <li><a href="#" id="personal">개인정보처리방침</a></li>
+                        <li><a href="#">법적고지</a></li>
+                        <li><a href="#">이메일주소무단수집거부</a></li>
+                        <li><a href="#">상생경영</a></li>
+                        <li><a href="#">사이트맵</a></li>
+                    </ul>
+                </div>
+                <div class="com-cinfo">
+                    <div class="logo"></div>
+                    <div class="address">
+                        (04377)서울특별시 용산구 한강대로 23길 55, 아이파크몰 6층(한강로동)<br/> 대표이사 : 서정 | 사업자등록번호 : 104-81-45690 | 통신판매업신고번호 : 2017-서울용산-0662<br/> 개인정보보호 책임자 : 마케팅 담당 정종민 | 대표이메일 : cjcgvmaster@cj.netCGV | 고객센터 : 1544-1122
+                    </div>
+                    <div class="share-outer">
+                        <div class="share">
+                            <a href="facebook"></a>
+                            <a href="twitter"></a>
+                            <a href="instagram"></a>
+                            <form action="">
+                                <select>
+                                   <option>계열사 바로가기</option>
+                                    <optgroup label="CJ그룹">
+                                        <option value="">CJ주식회사</option>
+                                    </optgroup>
+                                    <optgroup label="엔터네이먼트 & 미디어">
+                                        <option value="">CJ E&amp;M</option>
+                                        <option value="">CJ CGV</option>
+                                        <option value="">CJ Hello</option>
+                                        <option value="">CJ 파워캐스트</option>
+                                    </optgroup>
+                                       <optgroup label="식품 & 식품서비스">
+                                           <option value="">CJ 제일제당</option>
+                                           <option value="">CJ 프레시웨이</option>
+                                           <option value="">CJ 푸드빌</option>
+                                           <option value="">CJ 엠디원</option>
+                                       </optgroup>
+                                       <optgroup label="생명공학">
+                                           <option value="">CJ 제일제당</option>
+                                           <option value="">CJ 헬스케어</option>
+                                       </optgroup>
+                                       <optgroup label="신유통">
+                                           <option value="">CJ 오쇼핑</option>
+                                           <option value="">CJ 대한통운</option>
+                                           <option value="">CJ 텔레닉스</option>
+                                           <option value="">CJ 올리네트웟스</option>
+                                       </optgroup>
+                                       <optgroup label="인프라">
+                                           <option value="">CJ 건설</option>
+                                       </optgroup>
+                                        
+                                </select>
+                                <input type="submit" value="GO">
+                            </form>
+                        </div>
+                        <div class="copyright">
+                            © 2017 CJ CGV. All Rights Reserved
+                        </div>
+                    </div>
+                </div>
+            <div class="footer-bottom"></div>
+            </div>
+        </footer>
         <aside></aside>
     </div>
 </body>
