--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
             </div>
             <div class="sect-smuse">
                 <ul>
-                    <li><a href="#" class="dx"></a></li>
-                    <li><a href="#" class="imax"></a></li>
-                    <li><a href="#" class="screenx"></a></li>
-                    <li><a href="#" class="spherex"></a></li>
-                    <li><a href="#" class="soudx"></a></li>
-                    <li><a href="#" class="tempur-cinema"></a></li>
-                    <li><a href="#" class="cold-class"></a></li>
-                    <li><a href="#" class="cine-de-chef"></a></li>
-                    <li><a href="#" class="priveate-cinema"></a></li>
-                    <li><a href="#" class="cinekids"></a></li>
+                    <li><a href="#" class="dx">4dx</a></li>
+                    <li><a href="#" class="imax">imax</a></li>
+                    <li><a href="#" class="screenx">screenx</a></li>
+                    <li><a href="#" class="spherex">spherex</a></li>
+                    <li><a href="#" class="soundx">soundx</a></li>
+                    <li><a href="#" class="tempur-cinema">tempur-cinema</a></li>
+                    <li><a href="#" class="gold-class">gold-class</a></li>
+                    <li><a href="#" class="cine-de-chef">cine-de-chef</a></li>
+                    <li><a href="#" class="private-cinema">private-cinema</a></li>
+                    <li><a href="#" class="cinekids">cinekids</a></li>
                 </ul>
             </div>
             <div class="sect-cinfo">
@@ -206,9 +206,9 @@
                     </div>
                     <div class="share-outer">
                         <div class="share">
-                            <a href="facebook"></a>
-                            <a href="twitter"></a>
-                            <a href="instagram"></a>
+                            <a href="#" class="facebook"></a>
+                            <a href="#" class="twitter"></a>
+                            <a href="#" class="instagram"></a>
                             <form action="">
                                 <select>
                                    <option>계열사 바로가기</option>
