관리자및 여러가지등

--- a/movieMoneyContent.html
+++ b/movieMoneyContent.html
@@ -3,22 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/common.css">
-    <title>영화 그 이상의 감동. CGV</title>
-    <link rel="icon" href="img/cjcl.png">
-
-      <!--bootstrap-->
+    <!--bootstrap--> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <!--bootstrap-->
-   
-    <!-- Start WOWSlider.com HEAD section -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <!-- End WOWSlider.com HEAD section -->
-    <script type="text/javascript" src="js/jquery.vticker-min.js"></script>
+    <!--bootstrap--> 
+    <link rel="stylesheet" href="css/common.css">
+    <title>영화 그 이상의 감동. CGV</title>
+    <link rel="icon" href="img/cjcl.png">
+    
+    <link rel="stylesheet" href="css/movieMoney.css">
+
 
 </head>
 
@@ -69,103 +65,94 @@
                         </div>
                     </div>
                 </div>
-                <div class="header-banner">
-                    <img src="img/header-banner.jpg" alt="">
-                </div>
             </div>
         </header>
         <section>
             <div class="contant">
-                <div class="slider">
-                    <!-- Start WOWSlider.com BODY section -->
-                    <div id="wowslider-container1">
-                        <div class="ws_images">
-                            <ul>
-                                <li><img src="img/data1/images/slider1.jpg" alt="slider1" title="slider1" id="wows1_0" /></li>
-                                <li><img src="img/data1/images/slider2.jpg" alt="slider2" title="slider2" id="wows1_1" /></li>
-                                <li><img src="img/data1/images/slider3.jpg" alt="slider3" title="slider3" id="wows1_2" /></li>
-                                <li><img src="img/data1/images/slider4.jpg" alt="slider4" title="slider4" id="wows1_3" /></li>
-                                <li><img src="img/data1/images/slider5.jpg" alt="slider5" title="slider5" id="wows1_4" /></li>
-                                <li><a href="http://wowslider.net"><img src="img/data1/images/slider6.jpg" alt="image carousel" title="slider6" id="wows1_5"/></a></li>
-                                <li><img src="img/data1/images/slider7.jpg" alt="slider7" title="slider7" id="wows1_6" /></li>
-                            </ul>
-                        </div>
-                        <div class="ws_bullets">
-                            <div>
-                                <a href="#" title="slider1"><span><img src="img/data1/tooltips/slider1.jpg" alt="slider1"/>1</span></a>
-                                <a href="#" title="slider2"><span><img src="img/data1/tooltips/slider2.jpg" alt="slider2"/>2</span></a>
-                                <a href="#" title="slider3"><span><img src="img/data1/tooltips/slider3.jpg" alt="slider3"/>3</span></a>
-                                <a href="#" title="slider4"><span><img src="img/data1/tooltips/slider4.jpg" alt="slider4"/>4</span></a>
-                                <a href="#" title="slider5"><span><img src="img/data1/tooltips/slider5.jpg" alt="slider5"/>5</span></a>
-                                <a href="#" title="slider6"><span><img src="img/data1/tooltips/slider6.jpg" alt="slider6"/>6</span></a>
-                                <a href="#" title="slider7"><span><img src="img/data1/tooltips/slider7.jpg" alt="slider7"/>7</span></a>
-                            </div>
-                        </div>
-                        <div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">slider</a> by WOWSlider.com v8.8</div>
-                        <div class="ws_shadow"></div>
+                <div class="mm-contents">
+                    <div class="mm-title">영화관람권</div>
+                    <div class="mm-content">
+                        <img src="img/moviemoney/detailnomal.jpg" alt="">
+                        <table>
+                            <tr>
+                                <td colspan="2">CGV 영화 관람권 (기프티콘)</td>
+                            </tr>
+                            <tr>
+                                <td>판매가</td>
+                                <td>9000원</td>
+                            </tr>
+                            <tr>
+                                <td>상품설명</td>
+                                <td>영화관람권이 MMS 기프트콘으로 전송이 됩니다.<br>
+                                    수령하신 MMS는 온라인으로 예매하거나,<br>
+                                    극장 매표소에서 사용하실 수 있습니다.</td>
+                            </tr>
+                            <tr>
+                                <td>유효기간</td>
+                                <td>구매 후 2년 이내</td>
+                            </tr>
+                            <tr>
+                                <td>상품교환</td>
+                                <td>관람 예전 극장</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <button class="btn btn-primary">목록으로</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-warning">선물하기</button>
+                                    <button class="btn btn-danger">구매하기</button>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
-                    <script type="text/javascript" src="js/wowslider.js"></script>
-                    <script type="text/javascript" src="js/script.js"></script>
-                    <!-- End WOWSlider.com BODY section -->
-
-                </div>
-                <div class="movie-selection">
-                    <h3>
-                        <img src="img/h3_movie_selection.gif" alt="movie selection">
-                    </h3>
-                    <div class="cons-movie">
-                        <iframe width="733" height="388" src="https://www.youtube.com/embed/0lUYfSRmcEE" frameborder="0" allowfullscreen></iframe>
-                        <!--이미지 크기 메모 240x388-->
-                        <img src="img/MurderontheOrientExpress.jpg" alt="오리엔탈 특급살인">
-                    </div>
-                </div>
-                <div class="event">
-                    <h3>
-                        <img src="img/h3_event.gif" alt="event">
-                    </h3>
-                    <div class="tab-menu">
+                    <div class="mm-explantion">
+                        <span>상품이용안내</span>
                         <ul>
-                            <li></li>
-                            <li><a href="#">CGV스페셜</a></li>
-                            <li><a href="#">영화/예매</a></li>
-                            <li><a href="#">CGV아트하우스</a></li>
-                            <li><a href="#">제휴/할인</a></li>
-                            <li><a href="#">멤버십</a></li>
-                            <li></li>
+                            <li>CGV 홈페이지, 모바일, 극장 방문 시 본 영화관람권으로 예매하실 수 있습니다.</li>
+                            <li>(홈페이지 빠른예매 > 결제 수단 > '할인/무료/포인트' 선택 > 'CGV기프트콘' 선택 > 기프트콘 번호 입력)</li>
+                            <li>CGV 영화관람권은 금액권이 아닙니다. (조조영화/청소년 관람 시 차액환급 불가)</li>
+                            <li>CGV 영화관람권 유효기간은 구매일로부터 2년입니다. (2012.8.10 구매분부터)</li>
+                            <li>CGV 결제가 완료된 영화 관람권은 ‘My CGV > My 구매정보 > 영화관람권’에서 취소할 수 있습니다.</li>
+                            <li>일부 극장(CGV여의도, 청담씨네시티 등) 및 특화관, 3D/4DX 영화 예매시에는 사용하실 수 없습니다.</li>
+                            <li>관람권 구입시 CJ ONE 포인트는 적립되지 않습니다.</li>
+                            <li>기프트콘은 상품권으로 구매 시 신용카드 할인이 적용되지 않습니다.</li>
                         </ul>
-                        <!--링크는 임시로 만들어주세요-->
-                        <div class="sect-event">
-                            <ul>
-                                <li title=""><a href="#"><img src="img/sect-event1.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/sect-event2.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/sect-event3.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/sect-event4.jpg" alt=""></a></li>
-                            </ul>
-                        </div>
-                        <div class="cols-banner">
-                            <div class="cols-banner1"><img src="img/cols-banner1.jpg" alt=""></div>
-                            <div class="cols-banner2"><img src="img/cols-banner2.jpg" alt=""></div>
-                            <div class="cols-banner3"><img src="img/cols-banner3.jpg" alt=""></div>
-                        </div>
-                        <!--공지사항을 나중에 제목만 리스트롤 뽑아 낼것임 공지 사항등록 한것중에 필요 한것들만 -->
-                        <div class="notice-outer-outer">
-
-                            <div class="notice-outer">
-                                    <p><img src="img/ico_notice.png" alt=""> 공지사항 &nbsp;</p>
-                                <div class="notice">
-                                    <ul>
-                                        <li>notice-subject-test1</li>
-                                        <li>notice-subject-test2</li>
-                                        <li>notice-subject-test3</li>
-                                        <li>notice-subject-test4</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <!--공지사항을 나중에 제목만 리스트롤 뽑아 낼것임 공지 사항등록 한것중에 필요 한것들만 -->
+                    </div>
+                    <div class="mm-step">
+                        <ul>
+                            <li>
+                                <ul>
+                                    <li><img src="img/moviemoney/step01.gif" alt=""></li>
+                                    <li><img src="img/moviemoney/cultureshop_step01.jpg" alt=""></li>
+                                    <li>기프트콘 구매/선물</li>
+                                    <li>기프트콘 선택 후 선물 받는 사람</li>
+                                    <li>또는 본인의 핸드폰번호를 입력하여</li>
+                                    <li>결제합니다.</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <ul>
+                                    <li><img src="img/moviemoney/step02.gif" alt=""></li>
+                                    <li><img src="img/moviemoney/cultureshop_step02.jpg" alt=""></li>
+                                    <li>기프트콘 MMS 수신</li>
+                                    <li>결제가 완료 되면 입력한 번호로 </li>
+                                    <li>구매한 상품의 MMS가 전송됩니다.</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <ul>
+                                    <li><img src="img/moviemoney/step03.gif" alt=""></li>
+                                    <li><img src="img/moviemoney/cultureshop_step03.jpg" alt=""></li>
+                                    <li>영화 예매 또는 CGV매점에서 상품 교환</li>
+                                    <li>수신된 MMS로 CGV 홈페이지/모바일 앱,</li>
+                                    <li>현장매표소에서 예매하거나 cgv 매점에서 </li>
+                                    <il>해당 제품으로 교환합니다.</il>
+                                </ul>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-
             </div>
         </section>
         <footer>
@@ -261,28 +248,4 @@
         <aside></aside>
     </div>
 </body>
-<!--js파일로 이동해야함-->
-<script>
-    $(function() {
-        $('.notice').vTicker({
-            // 스크롤 속도(default: 700)  
-            speed: 500,
-            // 스크롤 사이의 대기시간(default: 4000)  
-            pause: 3000,
-            // 스크롤 애니메이션  
-            animation: 'fade',
-            // 마우스 over 일때 멈출 설정  
-            mousePause: false,
-            // 한번에 보일 리스트수(default: 2)  
-            showItems: 4,
-            // 스크롤 컨테이너 높이(default: 0)  
-            height: 0,
-            // 아이템이 움직이는 방향, up/down (default: up)  
-            direction: 'up'
-        });
-    });
-
-</script>
-<!--js파일로 이동해야함-->
-
 </html>
