--- a/기본 값 header,footer.html
+++ b/기본 값 header,footer.html
@@ -6,7 +6,7 @@
     <!--bootstrap--> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <!--bootstrap--> 
     <link rel="stylesheet" href="css/common.css">
